kubernetes/argocd/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:latest
          ports:
          - name: sonarr-tcp
            containerPort: 8989
            protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: data-volume
              mountPath: /data
            - name: downloads-volume
              mountPath: /app/qBittorrent/downloads/ # shared download dir so sonarr can see it
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: sonarr-pvc-config
      - name: data-volume
        persistentVolumeClaim:
          claimName: sonarr-pvc-data
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: sonarr-pvc-downloads
