kubernetes/argocd/sonarr/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: sonarr-tcp
  namespace: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - port: 80
    targetPort: 8989
    name: sonarr-tcp
    protocol: TCP
  type: ClusterIP
