kubernetes/argocd/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.home.neels.tech`)
      services:
        - name: sonarr-tcp
          port: 80
  tls:
    secretName: sonarr-home-neels-tech-tls
